Major servicies i need in this project

--- a/services/product/src/main/resources/application.properties
+++ b/services/product/src/main/resources/application.properties
@@ -1,56 +1,2 @@
-#spring.datasource.url=jdbc:postgresql://localhost:5432/product
-#spring.datasource.username=alibou
-#spring.datasource.password=alibou
-#spring.datasource.driver-class-name=org.postgresql.Driver
-
-#spring.config.import=optional:configserver:http://localhost:8888
-
-#spring.jpa.hibernate.ddl-auto=validate
-#spring.jpa.database=postgresql
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-#spring.flyway.baseline-on-migrate=true
-#spring.flyway.enabled=true
-#spring.flyway.baseline-description="init"
-#spring.flyway.baseline-version=0
-#spring.flyway.user=${spring.datasource.username}
-#spring.flyway.password=${spring.datasource.password}
-
-#server.port=8050
-# =============================
-# === Spring Boot Settings ===
-# =============================
-
-server.port=8050
-
-# =============================
-# === MySQL Datasource Config ===
-# =============================
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_product_db
-spring.datasource.username=root
-spring.datasource.password=Ikiseh@1
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# =============================
-# === Config Server (Optional) ===
-# =============================
+spring.application.name=product-service
 spring.config.import=optional:configserver:http://localhost:8888
-
-# =============================
-# === JPA / Hibernate ===
-# =============================
-spring.jpa.database=mysql
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-
-# =============================
-# === Flyway Migration ===
-# =============================
-spring.flyway.enabled=false
-spring.flyway.baseline-on-migrate=true
-spring.flyway.baseline-description=init
-spring.flyway.baseline-version=0
-spring.flyway.user=${spring.datasource.username}
-spring.flyway.password=${spring.datasource.password}
