--- a/services/config-server/src/main/resources/configurations/product-service.properties
+++ b/services/config-server/src/main/resources/configurations/product-service.properties
@@ -1,2 +1,33 @@
-spring.application.name=product-service
+server.port=8050
+
+# =============================
+# === MySQL Datasource Config ===
+# =============================
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_product_db
+spring.datasource.username=root
+spring.datasource.password=Ikiseh@1
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# =============================
+# === Config Server (Optional) ===
+# =============================
 spring.config.import=optional:configserver:http://localhost:8888
+
+# =============================
+# === JPA / Hibernate ===
+# =============================
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+
+# =============================
+# === Flyway Migration ===
+# =============================
+spring.flyway.enabled=false
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-description=init
+spring.flyway.baseline-version=0
+spring.flyway.user=${spring.datasource.username}
+spring.flyway.password=${spring.datasource.password}
